Fixing spacing in modal

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -51,13 +51,9 @@ a {
   }
 }
 
-// .form-items {
-//   &:first-child {
-//     td {
-//       border-top: 0;
-//     }
-//   }
-// }
+.pagination {
+  margin: 0;
+}
 
 .package-form {
   text-align: center;
